force-app/main/default/objects/Channel_Partner__c/fields/Aadhaar_No__c.field-meta.xml
<CustomField>
    <fullName>Aadhaar_No__c</fullName>
    <label>Aadhaar No.</label>
    <length>255</length>
    <type>Text</type>
</CustomField>