force-app/main/default/objects/Channel_Partner__c/fields/City_you_reside_in__c.field-meta.xml
<CustomField>
    <fullName>City_you_reside_in__c</fullName>
    <label>City you reside in</label>
    <length>255</length>
    <type>Text</type>
</CustomField>