force-app/main/default/objects/Channel_Partner__c/fields/Company_GST_No__c.field-meta.xml
<CustomField>
    <fullName>Company_GST_No__c</fullName>
    <label>Company GST No</label>
    <length>255</length>
    <type>Text</type>
</CustomField>