force-app/main/default/objects/Channel_Partner__c/fields/Company_Head_Contact_No__c.field-meta.xml
<CustomField>
    <fullName>Company_Head_Contact_No__c</fullName>
    <label>Company Head Contact No</label>
    <type>Phone</type>
</CustomField>