force-app/main/default/objects/Channel_Partner__c/fields/Company_Head_Email_ID__c.field-meta.xml
<CustomField>
    <fullName>Company_Head_Email_ID__c</fullName>
    <label>Company Head Email ID</label>
    <type>Email</type>
</CustomField>