force-app/main/default/objects/Channel_Partner__c/fields/Company_Owner_Contact_No__c.field-meta.xml
<CustomField>
    <fullName>Company_Owner_Contact_No__c</fullName>
    <label>Company Owner Contact No</label>
    <type>Phone</type>
</CustomField>