force-app/main/default/objects/Channel_Partner__c/fields/Company_Owner_Name__c.field-meta.xml
<CustomField>
    <fullName>Company_Owner_Name__c</fullName>
    <label>Company Owner Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>