force-app/main/default/objects/Channel_Partner__c/fields/Company_PAN_Card_No__c.field-meta.xml
<CustomField>
    <fullName>Company_PAN_Card_No__c</fullName>
    <label>Company PAN Card No</label>
    <length>255</length>
    <type>Text</type>
</CustomField>