force-app/main/default/objects/Channel_Partner__c/fields/ContactPerson__c.field-meta.xml
<CustomField>
    <fullName>ContactPerson__c</fullName>
    <label>CP Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>