force-app/main/default/objects/Channel_Partner__c/fields/CP_Contact_No__c.field-meta.xml
<CustomField>
    <fullName>CP_Contact_No__c</fullName>
    <label>CP Contact No</label>
    <type>Phone</type>
</CustomField>