force-app/main/default/objects/Channel_Partner__c/fields/Is_Password_Change__c.field-meta.xml
<CustomField>
    <fullName>Is_Password_Change__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Password Change</label>
    <type>Checkbox</type>
</CustomField>