force-app/main/default/objects/Channel_Partner__c/fields/No_of_Booking__c.field-meta.xml
<CustomField>
    <fullName>No_of_Booking__c</fullName>
    <label>No. of Booking</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>