force-app/main/default/objects/Channel_Partner__c/fields/OTP_Number__c.field-meta.xml
<CustomField>
    <fullName>OTP_Number__c</fullName>
    <label>OTP Number</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>