force-app/main/default/objects/Channel_Partner__c/fields/PAN_Card_No__c.field-meta.xml
<CustomField>
    <fullName>PAN_Card_No__c</fullName>
    <label>PAN Card No</label>
    <length>255</length>
    <type>Text</type>
</CustomField>