force-app/main/default/objects/Channel_Partner__c/fields/Reginol_Manager_Zuari1__c.field-meta.xml
<CustomField>
    <fullName>Reginol_Manager_Zuari1__c</fullName>
    <label>Reginol Manager Zuari</label>
    <length>220</length>
    <type>Text</type>
</CustomField>