force-app/main/default/objects/Channel_Partner__c/fields/Reginol_Manager_Zuari__c.field-meta.xml
<CustomField>
    <fullName>Reginol_Manager_Zuari__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Reginol Manager Zuari</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Channel_Partner3</relationshipName>
    <type>Lookup</type>
</CustomField>