force-app/main/default/objects/Channel_Partner__c/fields/Reginol_Manager_Zuari_Mobile__c.field-meta.xml
<CustomField>
    <fullName>Reginol_Manager_Zuari_Mobile__c</fullName>
    <label>Reginol Manager Zuari Mobile</label>
    <type>Phone</type>
</CustomField>