force-app/main/default/objects/Channel_Partner__c/fields/Regional_Manager1__c.field-meta.xml
<CustomField>
    <fullName>Regional_Manager1__c</fullName>
    <label>Regional Manager</label>
    <length>220</length>
    <type>Text</type>
</CustomField>