force-app/main/default/objects/Channel_Partner__c/fields/Regional_Manager_Mobile__c.field-meta.xml
<CustomField>
    <fullName>Regional_Manager_Mobile__c</fullName>
    <label>Regional Manager Mobile</label>
    <type>Phone</type>
</CustomField>