force-app/main/default/objects/Channel_Partner__c/fields/Registraction_No__c.field-meta.xml
<CustomField>
    <fullName>Registraction_No__c</fullName>
    <label>Registration No</label>
    <length>220</length>
    <type>Text</type>
</CustomField>