force-app/main/default/objects/Channel_Partner__c/fields/RERA__c.field-meta.xml
<CustomField>
    <fullName>RERA__c</fullName>
    <label>RERA</label>
    <length>80</length>
    <type>Text</type>
</CustomField>