force-app/main/default/objects/Channel_Partner__c/fields/RERA_Validity__c.field-meta.xml
<CustomField>
    <fullName>RERA_Validity__c</fullName>
    <label>RERA Validity</label>
    <type>Date</type>
</CustomField>