force-app/main/default/objects/Channel_Partner__c/fields/Rewards__c.field-meta.xml
<CustomField>
    <fullName>Rewards__c</fullName>
    <label>Rewards</label>
    <summaryForeignKey>CP_Rewards__c.Channel_Partner__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>