force-app/main/default/objects/Channel_Partner__c/fields/Team_Leader__c.field-meta.xml
<CustomField>
    <fullName>Team_Leader__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Team Leader</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Channel_Partner2</relationshipName>
    <type>Lookup</type>
</CustomField>