force-app/main/default/objects/Channel_Partner__c/fields/Team_Leader_Zuari1__c.field-meta.xml
<CustomField>
    <fullName>Team_Leader_Zuari1__c</fullName>
    <label>Team Leader Zuari</label>
    <length>220</length>
    <type>Text</type>
</CustomField>