force-app/main/default/objects/Channel_Partner__c/fields/Team_Leader_Zuari__c.field-meta.xml
<CustomField>
    <fullName>Team_Leader_Zuari__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Team Leader Zuari</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Channel_Partner4</relationshipName>
    <type>Lookup</type>
</CustomField>