force-app/main/default/objects/Channel_Partner__c/fields/Team_Leader_Zuari_Mobile__c.field-meta.xml
<CustomField>
    <fullName>Team_Leader_Zuari_Mobile__c</fullName>
    <label>Team Leader Zuari Mobile</label>
    <type>Phone</type>
</CustomField>