force-app/main/default/objects/Channel_Partner__c/fields/Team_Strength__c.field-meta.xml
<CustomField>
    <fullName>Team_Strength__c</fullName>
    <label>Team Strength</label>
    <length>255</length>
    <type>Text</type>
</CustomField>