force-app/main/default/objects/Channel_Partner__c/fields/Top_Perfomer__c.field-meta.xml
<CustomField>
    <fullName>Top_Perfomer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Top Perfomer</label>
    <type>Checkbox</type>
</CustomField>