force-app/main/default/objects/Channel_Partner__c/fields/Total_Commission__c.field-meta.xml
<CustomField>
    <fullName>Total_Commission__c</fullName>
    <label>Total Commission</label>
    <length>100</length>
    <type>Text</type>
</CustomField>