force-app/main/default/objects/Channel_Partner__c/fields/User_Id__c.field-meta.xml
<CustomField>
    <fullName>User_Id__c</fullName>
    <displayFormat>CH-{0000}</displayFormat>
    <label>User Id</label>
    <type>AutoNumber</type>
</CustomField>