force-app/main/default/objects/Channel_Partner__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Active__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>User_Id__c</columns>
    <columns>Mobile_Number__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>